<resources>
    <string name="app_name">Nanodegree Apps</string>
    <string name="enter_artist_name">Enter Artist Name&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_spotify">Search Artists</string>
    <string name="artist_image">Artist Image</string>
    <string name="sample_artist">Sample Artist</string>
    <string name="track_name">Track</string>
    <string name="album_name">Album</string>
    <string name="my_nano_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="XYZ_reader">XYZ READER</string>
    <string name="capstone_my_app">CAPSTONE: MY OWN APP</string>
    <string name="artist_search">Artist Search</string>
    <string name="zeroSeconds">0:00</string>
    <string name="backButton">backButton</string>
    <string name="playButton">playButton</string>
    <string name="nextButton">nextButton</string>
    <string name="AlbumThumb">Album Thumb</string>
</resources>
