<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false"
    android:id="@+id/layout2"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/my_nano_apps" />

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/editText"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/buttonSpotifyStreamer"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/buttonScoresApp"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/buttonLibraryApp"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/buttonBuildItBigger"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="10dp"
            />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/XYZ_reader"
            android:id="@+id/buttonXYZReader"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone_my_app"
            android:id="@+id/buttonMyOwnApp"
            android:layout_gravity="center_horizontal"
            android:background="@color/highlighted_text_material_dark"
            android:textColor="#000"
            android:layout_marginBottom="10dp"

            />

    </LinearLayout>

</RelativeLayout>
